# Learn

./: Python - Shortcut.lnk  README.md  makefile
CPP/: readme-cpp.md
CPP/CppApplication_Windows/: main.cpp
CPP/HelloWorld/: CMakeCache.txt  CMakeLists.txt  fun_decimal_to_binary.cpp  helloworld.cpp  makefile  runcpp.sh
CPP/LearnBasics/: function-template.cpp  learn-OperatorOverloading.cpp  learn-class-comparison.cpp  learn-class-template.cpp  learn-constexpr.cpp  learn-memory.cpp  learn-parallel.cpp  learn-random.cpp  learn-threads.cpp  learn_algorithm.cpp
CPP/LearnCMake/: .clang-format  CMakeLists-a.txt  CMakeLists-hello.txt  CMakeLists-lib.txt  CMakeLists.txt  hello-auto.cpp  main.cpp
CPP/LearnCMake/lib/math/: operations.cpp  operations.hpp
CPP/LearnClass/: main.cpp  makefile  terminalColors.txt
CPP/LearnLibrary/: Makefile  main.cpp
Docker/: learn-docker.md
Github/: Change-Management.txt  commands.txt
HTML/: bulletNumbering.html  doc-invoice1-1.html  doc-invoice1-2.html  doc-invoice222.html
Java/: AnalogClock.java  DrawFlag.java  DrawFlags.java  FlagIN.java  FlagShapes.java  Main.java  Notepad.java
JavaScript/: buttonProgress.js  index.html  objFilter.js  style.css
JavaScript/SVG/: main.js  (+5 more)
LaTeX/: executePython.tex
Mathematics/: Pythagorean_Triple_20210308_0313.xlsx
Node/: index.js  package-lock.json  package.json
Powershell/: promptModify.ps1
Python/: string_manipuation.py
SQL/: cmd_postgreSQL.txt
SVG/: flagStyle.css  main.html
Shell/: changeTerminalColors.sh  learn-sed-example-file.txt  learn-sh.sh  man-sh.md  terminalColors.txt
(+242 files in other folders)
